# ParticleSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  run.sh
src/: ball.cpp  ball.hpp  main.cpp
